Fix and organize the styles. (overflow fixed)

--- a/static/less/main.less
+++ b/static/less/main.less
@@ -1,9 +1,13 @@
-/**
- * Import all the styles.
- */
+// -----------
+// CORE STYLES
+// -----------
 
 @import "colors.less";
 @import "fonts.less";
+
+// ------------------
+// GLOBAL DEFINITIONS
+// ------------------
 
 .no-select {
 	-webkit-touch-callout: none;
@@ -18,125 +22,20 @@
 	clear: both;
 }
 
-html, body {
+html {
 	font-family: 'bryant alternate';
 	background-color: #fff;
-}
-body {
-	overflow: hidden;
-}
-
-html.LocationListPage {
-	overflow-y: scroll;
 }
 
 h1, h2, h3 {
 	font-size: 2em;
-	padding: 0.7em;
 	font-weight: bold;
+	padding: 0.7em;
 }
 
-table {
-	width: 100%;
-	border: 1px solid #aaa;
-	td, th {
-		border: 1px solid #aaa;
-		padding: 0.3em;
-	}
-	th {
-		font-weight: bold;
-	}
-}
+// --------------------
+// PAGE-SPECIFIC STYLES
+// --------------------
 
-.tableWrap {
-	max-width: 500px;
-	margin: auto;
-}
-
-#formContainer {
-	.no-select;
-	display: none;
-	position: absolute;
-	font-size: 0.8em;
-	width: 350px;
-	background-color: rgba(243, 156, 18, 0.7); // this is @orange
-	//background-color: rgba(230, 126, 34, 0.5); // this is @carrot
-	border: 1px solid rgb(243, 156, 18); // this is @orange
-	z-index: 100;
-	padding: 1em;
-	#grabHandle img {
-		display: block;
-		margin: auto;
-	}
-	input {
-		border: 1px solid @clouds;
-		background-color: rgba(255, 255, 255, 0.8);
-		display: block;
-		width: 75%;
-		margin: 0.5em auto;
-		padding: 0.5em;
-	}
-	button#close {
-		float: right;
-	}
-	button {
-		display: block;
-		background-color: @clouds;
-		border: 0;
-		padding: 0.5em;
-		margin: auto;
-	}
-	#formThanks {
-		display: none;
-	}
-}
-
-.dragging {
-	background-color: 
-		rgba(0, 0, 0, 0.2) !important;
-}
-
-
-.MapPage {
-	.no-select;
-	#mapContainer {
-		position: relative;
-		background-color: #fff;
-
-		#mapWrap {
-			width: 100%;
-			position: absolute;
-			top: 0;
-			z-index: 5;
-
-			#mapOrange {
-				.no-select;
-				display: block;
-				margin: auto;
-				background-size: contain;
-				background-repeat: no-repeat;
-				background-position: center top;
-				background-image: 
-					url('/static/img/map_with_header.png');
-
-				#mapGray {
-					.no-select;
-					background-image: 
-						url('/static/img/map_with_header_grey.png');
-					background-size: contain;
-					background-repeat: no-repeat;
-					background-position: center top;
-				}
-			}
-			#blank {
-				.no-select;
-			}
-		}
-		img.marker {
-			position: absolute;
-			top: 0;
-			left: 0;
-		}
-	}
-}
-
+@import "page-map.less";
+@import "page-other.less";
